# quick-command-deck

./: .gitmodules  README.md  communique.proto
deck_firmware/: README.md  communique.pb.c  communique.pb.h  deck_firmware.ino  pb.h  pb_common.c  pb_common.h  pb_decode.c  pb_decode.h  pb_encode.c  pb_encode.h
management_app/: Cargo.toml  README.md  build.rs
management_app/src/: config.toml.example  config_parser.rs  main.rs
management_app/src/optional_features/: dbus_integration.rs  mod.rs
