[package]
name = "management_app"
version = "0.1.0"
authors = ["Colin Diener <colin@colind.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
protobuf = "2.25.1"

[build-dependencies]
protobuf-codegen-pure = "2.25.1"