[package]
name = "management_app"
version = "0.1.0"
authors = ["Colin Diener <colin@colind.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
protobuf = "2.25.1"
log = "0.4"
pretty_env_logger = { version = "0.4" }
toml = "0.5"
dbus = {version = "0.9.5", optional = true}
dbus-crossroads = {version = "0.5.0", optional = true}

[features]
dbus_integration = ["dbus", "dbus-crossroads"]

[build-dependencies]
protobuf-codegen-pure = "2.25.1"
